syntax = "proto3";

option csharp_namespace = "ChromaControl.Common.Protos.Devices";

package chromacontrol.devices;

service DevicesGrpc {
    rpc GetVendors(EmptyMessage) returns (VendorListResponse);
    rpc ToggleVendor(ToggleVendorRequest) returns (EmptyMessage);
}

message EmptyMessage { }

message Vendor {
    string name = 1;
    bool enabled = 2;
    bool dangerous = 3;
}

message VendorListResponse {
    repeated Vendor vendors = 1;
}

message ToggleVendorRequest {
    string name = 1;
    bool enabled = 2;
}
